small refactoring && fix expna collapse

--- a/src/components/TreeView/style.styl
+++ b/src/components/TreeView/style.styl
@@ -5,7 +5,7 @@
   width 100%
   height 100%
   color #333
-  background-color #f0f0f0
+  background-color #ebebeb
   will-change scroll-position
   overflow auto
 
@@ -21,6 +21,7 @@
   box-sizing border-box
   user-select none
   border-left 5px solid transparent
+  background-color #f0f0f0
   overflow hidden
 
   &:focus
@@ -112,10 +113,6 @@
         background-color #d4e3fc
     & > .tv-node__content.tv-node__content_fake
       max-height 27px
-
-  &:not(.tv-node_folder)
-    .tv-node__switcher
-      visibility hidden
 
   for num in (0..9)
     &.tv-node_deep-level-{num}
